Bug 1362412 - Do not invalidate table cell's parent frame if it's not border collapse or there is no border. r=mattwoodrow

MozReview-Commit-ID: 5nTrJmMbm9d